--- a/session0/session0.ipynb
+++ b/session0/session0.ipynb
@@ -109,7 +109,38 @@
     "from importlib import reload\n",
     "from helper import run_test\n",
     "\n",
-    "import helper"
+    "# this is how you import an entire module\n",
+    "import helper\n",
+    "\n",
+    "# this is how you import a particular function, class or constant\n",
+    "from helper import little_endian_to_int\n",
+    "\n",
+    "# used in the next tip\n",
+    "some_long_variable_name = 'something'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Jupyter Tips\n",
+    "\n",
+    "#### The two most useful things are tab and shift-tab\n",
+    "\n",
+    "Tab lets you tab-complete. Try pressing tab after the `some` below. This will complete to the variable name that's there from the last cell.\n",
+    "\n",
+    "Shift-Tab gives you a function/method signature. Try pressing shift-tab after the `little_endian_to_int` below. That's also there from the last cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "some\n",
+    "\n",
+    "little_endian_to_int()"
    ]
   },
   {
@@ -170,7 +201,7 @@
     "Indexing bytes will get you the numerical value:\n",
     "\n",
     "```python\n",
-    "print(b'&'[0]) # 38 since & charcter #38\n",
+    "print(b'&'[0]) # 38 since & is charcter #38 \n",
     "```\n",
     "\n",
     "You can do the reverse by using bytes:\n",
@@ -240,8 +271,12 @@
     "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'\n",
     "\n",
     "# convert to binary (bytes.fromhex)\n",
+    "b = bytes.fromhex(h)\n",
     "# reverse ([::-1])\n",
-    "# convert to hex()"
+    "b_rev = b[::-1]\n",
+    "# convert to hex()\n",
+    "h_rev = b_rev.hex()\n",
+    "print(h_rev)"
    ]
   },
   {
@@ -300,9 +335,9 @@
     "# Exercise 3\n",
     "\n",
     "prime = 19\n",
-    "# 99\n",
-    "# 456*444\n",
-    "# 9**77"
+    "print(99 % prime)\n",
+    "print(456*444 % prime)\n",
+    "print(9**77 % prime)"
    ]
   },
   {
@@ -386,10 +421,10 @@
     "# Exercise 4.1\n",
     "\n",
     "n = 8675309\n",
-    "# print n in 8 big endian bytes\n",
+    "print(n.to_bytes(8, 'big'))\n",
     "\n",
     "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n",
-    "# print little endian in decimal"
+    "print(int.from_bytes(little_endian, 'little'))"
    ]
   },
   {
@@ -422,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
