--- a/session5/complete/distribute.ipynb
+++ b/session5/complete/distribute.ipynb
@@ -12,32 +12,31 @@
     "\n",
     "# disperse\n",
     "from ecc import PrivateKey\n",
-    "from helper import decode_base58, double_sha256, little_endian_to_int, p2pkh_script, SIGHASH_ALL\n",
-    "from script import Script\n",
+    "from helper import decode_base58, double_sha256, little_endian_to_int, SIGHASH_ALL\n",
+    "from script import p2pkh_script, Script\n",
     "from tx import TxIn, TxOut, Tx\n",
     "\n",
-    "passphrase = b''\n",
+    "passphrase = b'jimmy@programmingblockchain.com secret passphrase'\n",
     "secret = little_endian_to_int(double_sha256(passphrase))\n",
     "priv = PrivateKey(secret=secret)\n",
     "my_address = priv.point.address(testnet=True)\n",
     "print(my_address)\n",
     "target_amount = 0.1\n",
-    "fee = 0.005\n",
+    "fee = 0.001\n",
     "\n",
-    "response = requests.get('https://testnet.blockexplorer.com/api/addr/{}/utxo'.format(my_address))\n",
-    "utxos = response.json()\n",
-    "\n",
+    "response = requests.get('https://testnet.blockchain.info/unspent?active={}'.format(my_address))\n",
+    "utxos = response.json()['unspent_outputs']\n",
     "if (len(utxos) == 0):\n",
     "    raise RuntimeError('no outputs!')\n",
     "\n",
-    "student_addresses = 'mtShBfBH9LFyHmqJFuKjmAPfv6jJmwpbeV'\n",
+    "student_addresses = ''\n",
     "# initialize inputs\n",
     "tx_ins = []\n",
     "total = 0\n",
     "for utxo in utxos:\n",
-    "    prev_tx = bytes.fromhex(utxo['txid'])\n",
-    "    prev_index = utxo['vout']\n",
-    "    total += utxo['amount']\n",
+    "    prev_tx = bytes.fromhex(utxo['tx_hash_big_endian'])\n",
+    "    prev_index = utxo['tx_output_n']\n",
+    "    total += utxo['value']\n",
     "    # create a new tx input\n",
     "    tx_ins.append(TxIn(\n",
     "            prev_tx=prev_tx,\n",
@@ -62,7 +61,7 @@
     "        script_pubkey=script_pubkey,\n",
     "    ))\n",
     "\n",
-    "change_satoshis = int((total-fee)*100000000) - output_amount\n",
+    "change_satoshis = total - int(fee*100000000) - output_amount\n",
     "h160 = decode_base58(my_address)\n",
     "script_pubkey = p2pkh_script(h160)\n",
     "tx_outs.append(TxOut(amount=change_satoshis, script_pubkey=script_pubkey))\n",
@@ -75,7 +74,7 @@
     "    tx_obj.sign_input(i, priv, SIGHASH_ALL)\n",
     "\n",
     "# SANITY CHECK: fee is reasonable\n",
-    "if tx_obj.fee(testnet=True) > 0.05*100000000 or tx_obj.fee(testnet=True) <= 0:\n",
+    "if tx_obj.fee() > 0.05*100000000 or tx_obj.fee() <= 0:\n",
     "    raise RuntimeError('Check that the change amount is reasonable. Fee is {}'.format(tx_obj.fee()))\n",
     "\n",
     "# serialize and hex()\n",
@@ -101,29 +100,31 @@
     "\n",
     "# disperse\n",
     "from ecc import PrivateKey\n",
-    "from helper import decode_base58, double_sha256, little_endian_to_int, p2pkh_script, SIGHASH_ALL\n",
-    "from script import Script\n",
+    "from helper import decode_base58, double_sha256, little_endian_to_int, SIGHASH_ALL\n",
+    "from script import p2pkh_script, Script\n",
     "from tx import TxIn, TxOut, Tx\n",
     "\n",
-    "passphrase = b''\n",
+    "passphrase = b'jimmy@programmingblockchain.com secret passphrase'\n",
     "\n",
     "secret = little_endian_to_int(double_sha256(passphrase))\n",
     "priv = PrivateKey(secret=secret)\n",
     "my_address = priv.point.address(testnet=True)\n",
     "target_amount = 0.1\n",
-    "fee = 0.005\n",
+    "fee = 0.001\n",
     "\n",
-    "response = requests.get('https://testnet.blockexplorer.com/api/addr/{}/utxo'.format(my_address))\n",
-    "utxos = response.json()\n",
+    "response = requests.get('https://testnet.blockchain.info/unspent?active={}'.format(my_address))\n",
+    "utxos = response.json()['unspent_outputs']\n",
+    "if (len(utxos) == 0):\n",
+    "    raise RuntimeError('no outputs!')\n",
     "\n",
-    "student_addresses = 'mtShBfBH9LFyHmqJFuKjmAPfv6jJmwpbeV'\n",
+    "student_addresses = ''\n",
     "# initialize inputs\n",
     "tx_ins = []\n",
     "total = 0\n",
     "for utxo in utxos:\n",
-    "    prev_tx = bytes.fromhex(utxo['txid'])\n",
-    "    prev_index = utxo['vout']\n",
-    "    total += utxo['amount']\n",
+    "    prev_tx = bytes.fromhex(utxo['tx_hash_big_endian'])\n",
+    "    prev_index = utxo['tx_output_n']\n",
+    "    total += utxo['value']\n",
     "    # create a new tx input\n",
     "    tx_ins.append(TxIn(\n",
     "            prev_tx=prev_tx,\n",
@@ -149,7 +150,7 @@
     "        script_pubkey=script_pubkey,\n",
     "    ))\n",
     "\n",
-    "change_satoshis = int((total-fee)*100000000) - output_amount\n",
+    "change_satoshis = total - int((fee)*100000000) - output_amount\n",
     "\n",
     "h160 = decode_base58(my_address)\n",
     "script_pubkey = p2pkh_script(h160)\n",
@@ -163,7 +164,7 @@
     "    tx_obj.sign_input(i, priv, SIGHASH_ALL)\n",
     "\n",
     "# SANITY CHECK: fee is reasonable\n",
-    "if tx_obj.fee(testnet=True) > 0.05*100000000 or tx_obj.fee(testnet=True) <= 0:\n",
+    "if tx_obj.fee() > 0.05*100000000 or tx_obj.fee() <= 0:\n",
     "    raise RuntimeError('Check that the change amount is reasonable. Fee is {}'.format(tx_obj.fee()))\n",
     "\n",
     "# serialize and hex()\n",
