--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -207,6 +207,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 5\n",
+    "\n",
+    "#### 5.1. Download the first 40,000 blocks for testnet and validate them.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 5.1\n",
+    "\n",
+    "from block import TESTNET_GENESIS_BLOCK_HASH\n",
+    "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
+    "\n",
+    "# connect to tbtc.programmingblockchain.com\n",
+    "# handshake\n",
+    "# set the last block hash to the TESTNET_GENESIS_BLOCK_HASH\n",
+    "# set the block count to 1\n",
+    "# loop until we we get 40,000 blocks\n",
+    "    # create a GetHeadersMessage starting from the last block we have\n",
+    "    # send the getheaders command\n",
+    "    # wait for the headers command in response\n",
+    "    # parse the network envelope that comes back\n",
+    "    # loop through the blocks from the headers message\n",
+    "        # check the proof of work\n",
+    "        # the prev_block of the current block should be the last block\n",
+    "        # increment the block count\n",
+    "        # set the last block hash\n",
+    "        # print the block header every 2016 blocks (difficulty adjustment)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -227,15 +264,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 5\n",
+    "### Exercise 6\n",
     "\n",
-    "#### 5.1. Calculate the Merkle parent of these hashes:\n",
+    "#### 6.1. Calculate the Merkle parent of these hashes:\n",
     "```\n",
     "f391da6ecfeed1814efae39e7fcb3838ae0b02c02ae7d0a5848a66947c0727b0\n",
     "3d238a92a94532b946c90e19c49351c763696cff3db400485b813aecb8a13181\n",
     "```\n",
     "\n",
-    "#### 5.2. Make [this test](/edit/session7/helper.py) pass\n",
+    "#### 6.2. Make [this test](/edit/session7/helper.py) pass\n",
     "```\n",
     "helper.py:HelperTest:test_merkle_parent\n",
     "```"
@@ -247,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 5.1\n",
+    "# Exercise 6.1\n",
     "\n",
     "from helper import double_sha256\n",
     "\n",
@@ -265,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 5.2\n",
+    "# Exercise 6.2\n",
     "\n",
     "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_parent'))"
@@ -301,9 +338,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 6\n",
+    "### Exercise 7\n",
     "\n",
-    "#### 6.1. Calculate the next Merkle Parent Level given these hashes\n",
+    "#### 7.1. Calculate the next Merkle Parent Level given these hashes\n",
     "```\n",
     "8b30c5ba100f6f2e5ad1e2a742e5020491240f8eb514fe97c713c31718ad7ecd\n",
     "7f4e6f9e224e20fda0ae4c44114237f97cd35aca38d83081c9bfd41feb907800\n",
@@ -312,7 +349,7 @@
     "43e7274e77fbe8e5a42a8fb58f7decdb04d521f319f332d88e6b06f8e6c09e27\n",
     "```\n",
     "\n",
-    "#### 6.2. Make [this test](/edit/session7/helper.py) pass.\n",
+    "#### 7.2. Make [this test](/edit/session7/helper.py) pass.\n",
     "```\n",
     "helper.py:HelperTest:test_merkle_parent_level\n",
     "```"
@@ -324,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 6.1\n",
+    "# Exercise 7.1\n",
     "\n",
     "from helper import merkle_parent\n",
     "\n",
@@ -351,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 6.2\n",
+    "# Exercise 7.2\n",
     "\n",
     "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_parent_level'))"
@@ -392,9 +429,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 7\n",
+    "### Exercise 8\n",
     "\n",
-    "#### 7.1. Calculate the Merkle Root given these hashes\n",
+    "#### 8.1. Calculate the Merkle Root given these hashes\n",
     "```\n",
     "42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e\n",
     "94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4\n",
@@ -409,7 +446,7 @@
     "3311f8acc57e8a3e9b68e2945fb4f53c07b0fa4668a7e5cda6255c21558c774d\n",
     "```\n",
     "\n",
-    "#### 7.2. Make [this test](/edit/session7/helper.py) pass.\n",
+    "#### 8.2. Make [this test](/edit/session7/helper.py) pass.\n",
     "```\n",
     "helper.py:HelperTest:test_merkle_root\n",
     "```"
@@ -421,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 7.1\n",
+    "# Exercise 8.1\n",
     "\n",
     "from helper import double_sha256, merkle_parent_level\n",
     "hex_hashes = [\n",
@@ -451,7 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 7.2\n",
+    "# Exercise 8.2\n",
     "\n",
     "reload(helper)\n",
     "run_test(helper.HelperTest('test_merkle_root'))"
@@ -483,19 +520,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 8\n",
+    "### Exercise 9\n",
     "\n",
-    "#### 8.1. Validate the merkle root for this block on Testnet:\n",
+    "#### 9.1. Validate the merkle root for this block on Testnet:\n",
     "Block Hash:\n",
     "```\n",
     "0000000000000451fa80fcdb243b84c35eaae215a85a8faa880559e8239e6f20\n",
     "```\n",
-    "\n",
-    "Merkle Root:\n",
-    "```\n",
-    "4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301\n",
-    "```\n",
-    "as seen here: https://api.blockcypher.com/v1/btc/test3/blocks/0000000000000451fa80fcdb243b84c35eaae215a85a8faa880559e8239e6f20\n",
     "\n",
     "Transaction Hashes:\n",
     "```\n",
@@ -512,7 +543,7 @@
     "3311f8acc57e8a3e9b68e2945fb4f53c07b0fa4668a7e5cda6255c21558c774d\n",
     "```\n",
     "\n",
-    "#### 8.2. Make [this test](/edit/session7/block.py) pass.\n",
+    "#### 9.2. Make [this test](/edit/session7/block.py) pass.\n",
     "```\n",
     "block.py:BlockTest:test_validate_merkle_root\n",
     "```"
@@ -524,7 +555,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 8.1\n",
+    "# Exercise 9.1\n",
     "\n",
     "from helper import double_sha256, merkle_root\n",
     "\n",
@@ -555,10 +586,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 8.2\n",
+    "# Exercise 9.2\n",
     "\n",
     "reload(block)\n",
     "run_test(block.BlockTest('test_validate_merkle_root'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 10\n",
+    "\n",
+    "#### 10.1. Validate the merkle root for this block on Testnet via network protocol:\n",
+    "Block Hash:\n",
+    "```\n",
+    "0000000000044b01a9440b34f582fe171c7b8642fedd0ebfccf8fdf6a1810900\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 10.1\n",
+    "\n",
+    "from block import TESTNET_GENESIS_BLOCK_HASH, Block\n",
+    "from helper import read_varint\n",
+    "from network import BLOCK_DATA_TYPE, GetDataMessage, SimpleNode\n",
+    "from tx import Tx\n",
+    "\n",
+    "block_hex = '0000000000044b01a9440b34f582fe171c7b8642fedd0ebfccf8fdf6a1810900'\n",
+    "block_hash = bytes.fromhex(block_hex)\n",
+    "\n",
+    "# connect to tbtc.programmingblockchain.com on testnet\n",
+    "# handshake\n",
+    "\n",
+    "# create a GetDataMessage\n",
+    "# add the block we want\n",
+    "# send the getdata command\n",
+    "\n",
+    "# wait for the block command in response\n",
+    "# get the stream from the envelope\n",
+    "# block message is block header first, so parse a Block\n",
+    "# check the proof of work\n",
+    "# next the block message has the number of transactions so read_varint that\n",
+    "# initialize the tx_hashes list\n",
+    "# loop through that number of times\n",
+    "    # parse the transaction\n",
+    "    # add the transaction hash to the tx_hashes list\n",
+    "\n",
+    "# set the block's tx_hashes to the ones we've gathered\n",
+    "# validate the tx_hashes for the merkle root\n",
+    "# print the merkle root hex"
    ]
   },
   {
@@ -582,54 +664,6 @@
     "\n",
     "for level in merkle_tree:\n",
     "    print(level)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 9\n",
-    "\n",
-    "#### 9.1. Create a Merkle Tree with 27 items.\n",
-    "\n",
-    "#### 9.2. Make [this test](/edit/session7/merkleblock.py) pass.\n",
-    "```\n",
-    "merkleblock.py:MerkleTreeTest:test_init\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 9.1\n",
-    "\n",
-    "import math\n",
-    "\n",
-    "total = 27\n",
-    "\n",
-    "# get the max_depth (math.ceil(math.log(total, 2)))\n",
-    "# initialize the tree\n",
-    "# range over all possible depths (0 to max_depth INCLUSIVE)\n",
-    "    # the number of items at this level is math.ceil(total / 2**(max_depth-depth))\n",
-    "    # initialize this level with every item being None\n",
-    "    # add this level to the tree\n",
-    "# loop over each level in the merkle tree\n",
-    "    # print this level"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 9.2\n",
-    "\n",
-    "reload(merkleblock)\n",
-    "run_test(merkleblock.MerkleTreeTest('test_init'))"
    ]
   },
   {
@@ -667,14 +701,6 @@
     "tree.nodes[2] = merkle_parent_level(tree.nodes[3])\n",
     "tree.nodes[1] = merkle_parent_level(tree.nodes[2])\n",
     "tree.nodes[0] = merkle_parent_level(tree.nodes[1])\n",
-    "print(tree)\n",
-    "tree.right()\n",
-    "print(tree)\n",
-    "tree.left()\n",
-    "print(tree)\n",
-    "tree.right()\n",
-    "print(tree)\n",
-    "tree.up()\n",
     "print(tree)"
    ]
   },
@@ -685,7 +711,7 @@
    "outputs": [],
    "source": [
     "# Merkle Tree Populating Example #2\n",
-    "reload(helper)\n",
+    "\n",
     "from merkleblock import MerkleTree\n",
     "from helper import merkle_parent\n",
     "\n",
@@ -723,82 +749,6 @@
     "            tree.set_current_node(merkle_parent(left_hash, right_hash))\n",
     "            tree.up()\n",
     "print(tree)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 10\n",
-    "\n",
-    "#### 10.1. Populate this Merkle Tree given the 8 hashes\n",
-    "Transaction Hashes:\n",
-    "```\n",
-    "42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e\n",
-    "94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4\n",
-    "959428d7c48113cb9149d0566bde3d46e98cf028053c522b8fa8f735241aa953\n",
-    "a9f27b99d5d108dede755710d4a1ffa2c74af70b4ca71726fa57d68454e609a2\n",
-    "62af110031e29de1efcad103b3ad4bec7bdcf6cb9c9f4afdd586981795516577\n",
-    "766900590ece194667e9da2984018057512887110bf54fe0aa800157aec796ba\n",
-    "e8270fb475763bc8d855cfe45ed98060988c1bdcad2ffc8364f783c98999a208\n",
-    "921b8cfd3e14bf41f028f0a3aa88c813d5039a2b1bceb12208535b0b43a5d09e\n",
-    "```\n",
-    "\n",
-    "#### 10.2. Make [this test](/edit/session7/merkleblock.py) pass.\n",
-    "```\n",
-    "merkleblock.py:MerkleTreeTest:test_populate_tree_1\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 10.1\n",
-    "from merkleblock import MerkleTree\n",
-    "from helper import merkle_parent\n",
-    "\n",
-    "num_items = 8\n",
-    "hex_hashes = [\n",
-    "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
-    "    '94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4',\n",
-    "    '959428d7c48113cb9149d0566bde3d46e98cf028053c522b8fa8f735241aa953',\n",
-    "    'a9f27b99d5d108dede755710d4a1ffa2c74af70b4ca71726fa57d68454e609a2',\n",
-    "    '62af110031e29de1efcad103b3ad4bec7bdcf6cb9c9f4afdd586981795516577',\n",
-    "    '766900590ece194667e9da2984018057512887110bf54fe0aa800157aec796ba',\n",
-    "    'e8270fb475763bc8d855cfe45ed98060988c1bdcad2ffc8364f783c98999a208',\n",
-    "    '921b8cfd3e14bf41f028f0a3aa88c813d5039a2b1bceb12208535b0b43a5d09e',\n",
-    "]\n",
-    "# create an empty Merkle Tree\n",
-    "# set the bottom layer to be the binary version of the hex hashes\n",
-    "# loop until the root is populated\n",
-    "    # if we have a leaf node\n",
-    "        # navigate up\n",
-    "    # else\n",
-    "        # get the left and right hashes\n",
-    "        # we need both left and right to compute the current node\n",
-    "        # if left is missing\n",
-    "            # navigate to the left\n",
-    "        # if right is missing\n",
-    "            # navigate to the right\n",
-    "        # else\n",
-    "            # combine left and right to set the current one\n",
-    "            # we're done with this sub-tree, navigate up\n",
-    "# print the tree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 10.2\n",
-    "\n",
-    "reload(merkleblock)\n",
-    "run_test(merkleblock.MerkleTreeTest('test_populate_tree_1'))"
    ]
   },
   {
@@ -849,79 +799,6 @@
     "            tree.set_current_node(merkle_parent(left_hash, left_hash))\n",
     "            tree.up()\n",
     "print(tree)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 11\n",
-    "\n",
-    "#### 11.1. Populate this Merkle Tree given the 5 hashes\n",
-    "Transaction Hashes:\n",
-    "```\n",
-    "42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e\n",
-    "94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4\n",
-    "959428d7c48113cb9149d0566bde3d46e98cf028053c522b8fa8f735241aa953\n",
-    "a9f27b99d5d108dede755710d4a1ffa2c74af70b4ca71726fa57d68454e609a2\n",
-    "62af110031e29de1efcad103b3ad4bec7bdcf6cb9c9f4afdd586981795516577\n",
-    "```\n",
-    "\n",
-    "#### 11.2. Make [this test](/edit/session7/merkleblock.py) pass.\n",
-    "```\n",
-    "merkleblock.py:MerkleTreeTest:test_populate_tree_2\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 11.1\n",
-    "from merkleblock import MerkleTree\n",
-    "from helper import merkle_parent\n",
-    "\n",
-    "hex_hashes = [\n",
-    "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
-    "    '94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4',\n",
-    "    '959428d7c48113cb9149d0566bde3d46e98cf028053c522b8fa8f735241aa953',\n",
-    "    'a9f27b99d5d108dede755710d4a1ffa2c74af70b4ca71726fa57d68454e609a2',\n",
-    "    '62af110031e29de1efcad103b3ad4bec7bdcf6cb9c9f4afdd586981795516577',\n",
-    "]\n",
-    "# create an empty Merkle Tree\n",
-    "# set the bottom layer to be the binary version of the hex hashes\n",
-    "# loop until the root is populated\n",
-    "    # if we have a leaf node\n",
-    "        # navigate up\n",
-    "    # else\n",
-    "        # get the left hash\n",
-    "        # check to see if we have the left one\n",
-    "            # navigate to the left\n",
-    "        # else if right node exists\n",
-    "            # if the right one exists, then we need to combine left and right\n",
-    "            # check to see if the right one is computed\n",
-    "                # navigate to the right one\n",
-    "            # else\n",
-    "                # combine left and right\n",
-    "                # subtree is done, navigate up\n",
-    "        # else\n",
-    "            # right doesn't exist, but left does. combine left twice\n",
-    "            # subtree is done, navigate up\n",
-    "# print the tree"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 11.2\n",
-    "\n",
-    "reload(merkleblock)\n",
-    "run_test(merkleblock.MerkleTreeTest('test_populate_tree_2'))"
    ]
   }
  ],
