--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -129,11 +129,7 @@
     " * `b'Hello World'`\n",
     " * `b'Goodbye!'`\n",
     "\n",
-    "#### 1.2. Make [this test](/edit/session8/bloomfilter.py) pass:\n",
-    "\n",
-    "```\n",
-    "bloomfilter.py:BloomFilterTest:test_add\n",
-    "```"
+    "#### 1.2. Make [this test](/edit/session8/bloomfilter.py) pass."
    ]
   },
   {
@@ -183,9 +179,12 @@
     "\n",
     "#### 2.1. Make [this test](/edit/session8/bloomfilter.py) pass.\n",
     "\n",
-    "```\n",
-    "bloomfilter.py:BloomFilterTest:test_filterload\n",
-    "```"
+    "#### 2.2. Do the following:\n",
+    "\n",
+    "* Connect to a testnet node\n",
+    "* Load a filter for your testnet address\n",
+    "* Send a request for transactions from the block which had your previous testnet transaction\n",
+    "* Receive the merkleblock and tx messages."
    ]
   },
   {
@@ -201,15 +200,54 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 2.2\n",
+    "\n",
+    "from bloomfilter import BloomFilter\n",
+    "from ecc import PrivateKey\n",
+    "from helper import decode_base58, double_sha256, little_endian_to_int\n",
+    "from merkleblock import MerkleBlock\n",
+    "from network import (\n",
+    "    FILTERED_BLOCK_DATA_TYPE, \n",
+    "    GetDataMessage,\n",
+    "    SimpleNode,\n",
+    ")\n",
+    "\n",
+    "block_hash = bytes.fromhex('<look this up>')\n",
+    "passphrase = b'<your email address> <optional phrase>'  # FILL THIS IN\n",
+    "secret = little_endian_to_int(double_sha256(passphrase))\n",
+    "private_key = PrivateKey(secret=secret)\n",
+    "addr = private_key.point.address(testnet=True)\n",
+    "print(addr)\n",
+    "filter_size = 30\n",
+    "filter_num_functions = 5\n",
+    "filter_tweak = -1  # FILL THIS IN\n",
+    "\n",
+    "# get the hash160 of the address, which is what we need to add to our filter\n",
+    "# create a bloom filter of size 30 and 5 functions. Add a tweak that you like\n",
+    "# add the h160 to the bloom filter\n",
+    "\n",
+    "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
+    "# complete the handshake\n",
+    "# load the bloom filter with the filterload command\n",
+    "# create a getdata message\n",
+    "# add a FILTERED_BLOCK_DATA_TYPE for the block hash above\n",
+    "# send a getdata message for a FILTERED_BLOCK_DATA_TYPE\n",
+    "# wait for the merkleblock command\n",
+    "# wait for the tx command"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
     "\n",
-    "#### 3.1. Make [this test](/edit/session8/merkleblock.py) pass.\n",
-    "```\n",
-    "merkleblock.py:MerkleBlockTest:test_parse\n",
-    "```"
+    "#### 3.1. Make [this test](/edit/session8/merkleblock.py) pass."
    ]
   },
   {
@@ -221,7 +259,7 @@
     "# Exercise 3.1\n",
     "\n",
     "reload(merkleblock)\n",
-    "run_test(merkleblock.MerkleBlockTest('test_parse'))"
+    "run_test(merkleblock.MerkleBlockTest('test_is_valid'))"
    ]
   },
   {
@@ -230,54 +268,7 @@
    "source": [
     "### Exercise 4\n",
     "\n",
-    "#### 4.1. Make [this test](/edit/session8/network.py) pass.\n",
-    "\n",
-    "```\n",
-    "network.py:GetDataTest:test_serialize\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 4.1\n",
-    "\n",
-    "reload(network)\n",
-    "run_test(network.GetDataMessageTest('test_serialize'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 5\n",
-    "\n",
-    "#### 5.1. Make [this test](/edit/session8/merkleblock.py) pass.\n",
-    "```\n",
-    "merkleblock.py:MerkleBlockTest:test_is_valid\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reload(merkleblock)\n",
-    "run_test(merkleblock.MerkleBlockTest('test_is_valid'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercise 6\n",
-    "\n",
-    "#### 6.1. You have been sent some unknown amount of testnet bitcoins to your address. \n",
+    "#### 4.1. You have been sent some unknown amount of testnet bitcoins to your address. \n",
     "\n",
     "Send all of it back (minus fees) to `mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv` using only the networking protocol."
    ]
@@ -288,14 +279,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 6.1\n",
+    "# Exercise 4.1\n",
     "\n",
     "import time\n",
     "\n",
     "from block import Block\n",
     "from bloomfilter import BloomFilter\n",
     "from ecc import PrivateKey\n",
-    "from helper import double_sha256, little_endian_to_int, encode_varint, read_varint, decode_base58, p2pkh_script, SIGHASH_ALL\n",
+    "from helper import (\n",
+    "    decode_base58,\n",
+    "    double_sha256,\n",
+    "    encode_varint,\n",
+    "    little_endian_to_int, \n",
+    "    read_varint,\n",
+    "    SIGHASH_ALL,\n",
+    ")\n",
     "from merkleblock import MerkleBlock\n",
     "from network import (\n",
     "    GetDataMessage,\n",
@@ -306,26 +304,29 @@
     "    TX_DATA_TYPE,\n",
     "    FILTERED_BLOCK_DATA_TYPE,\n",
     ")\n",
+    "from script import p2pkh_script\n",
     "from tx import Tx, TxIn, TxOut\n",
     "\n",
-    "last_block_hex = '000000000f99f894574cb8361bf4127af7df872973a4d7797e159c5e580c9cfb'\n",
-    "secret = -1  # fill this in\n",
-    "\n",
+    "last_block_hex = '0000000000000b8e8529996b47b8c3dd13c70adfaf94278883e05bba6ae9159a'\n",
+    "passphrase = b'jimmy@programmingblockchain.com secret passphrase'  # FILL THIS IN\n",
+    "secret = little_endian_to_int(double_sha256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
     "print(addr)\n",
-    "h160 = decode_base58(addr)\n",
+    "filter_size = 30\n",
+    "filter_num_functions = 5\n",
+    "filter_tweak = 90210  # FILL THIS IN\n",
     "\n",
     "target_address = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
     "target_h160 = decode_base58(target_address)\n",
     "target_script = p2pkh_script(target_h160)\n",
     "fee = 5000  # fee in satoshis\n",
     "\n",
-    "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
-    "\n",
+    "# get the hash160 of the address, which is what we need to add to our filter\n",
     "# create a bloom filter of size 30 and 5 functions. Add a tweak that you like\n",
     "# add the h160 to the bloom filter\n",
     "\n",
+    "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
     "# complete the handshake\n",
     "# load the bloom filter with the filterload command\n",
     "\n",
@@ -334,7 +335,6 @@
     "# send a getheaders message with the start block\n",
     "\n",
     "# wait for the headers message\n",
-    "\n",
     "# get the stream from the headers\n",
     "# parse the headers message\n",
     "# store the last block as None\n",
@@ -359,9 +359,11 @@
     "        # loop through the enumerated tx outs (enumerate(t.tx_outs))\n",
     "            # if our output has the same address as our address (addr) we found it\n",
     "                # we found our utxo. set prev_tx, prev_index, prev_amount\n",
+    "                # set the cache so we don't look up the tx in a block explorer\n",
+    "                # Use: TxIn.set_cache(prev_tx, t.serialize())\n",
     "# create tx_in\n",
     "# calculate the output amount (prev_amount - fee)\n",
-    "# create a new TxOut to output amount to target_script \n",
+    "# create a new TxOut to target_script.serialize() with the output amount\n",
     "# create a new transaction (testnet=True)\n",
     "# sign the transaction at input 0 with your private key and SIGHASH_ALL\n",
     "# serialize and hex to see what it looks like\n",
@@ -371,11 +373,11 @@
     "# create a GetDataMessage\n",
     "# ask for our transaction by adding its hash and TX_DATATYPE to the message\n",
     "# send the message\n",
-    "# wait a sec so this message goes through to the other node time.sleep(1) \n",
     "# now wait for a response\n",
     "envelope = node.wait_for_commands({b'tx', b'reject'})\n",
     "if envelope.command == b'tx':\n",
     "    print(envelope.payload.hex())\n",
+    "    print(t.hash().hex())\n",
     "else:\n",
     "    print(envelope.payload)"
    ]
