--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "#### 2.2. Write [this test](/edit/session2/ecc.py) using the results above\n",
     "```\n",
-    "ecc.py:ECCTest:test_add1\n",
+    "ecc.py:ECCTest:test_add\n",
     "```"
    ]
   },
